# ashkal

./: CMakeLists.txt
Include/Ashkal/Ashkal/: Ashkal.hpp  Camera.hpp  IntersectShapeVisitor.hpp  Math.hpp  Matrix.hpp  Point.hpp  RenderShapeVisitor.hpp  Resources.hpp  ShapeVisitor.hpp
Include/Ashkal/Shapes/: Circle.hpp  Ellipse.hpp  Line.hpp  Rectangle.hpp  Shape.hpp  Shapes.hpp  Square.hpp  Stage.hpp  Triangle.hpp
Include/Tests/: TestUtility.hpp
Source/Ashkal/: IntersectShapeVisitor.cpp  Matrix.cpp  RenderShapeVisitor.cpp  main.cpp
Source/Common/: Camera.cpp  IntersectShapeVisitor.cpp  Matrix.cpp  Point.cpp  RenderShapeVisitor.cpp  Resources.cpp
Source/Shapes/: Circle.cpp  Ellipse.cpp  Line.cpp  Rectangle.cpp  Shape.cpp  Square.cpp  Stage.cpp  Triangle.cpp
Source/Tests/: IntersectShapeTester.cpp  IntersectsTester.cpp  MakeShapeTester.cpp  MatrixTester.cpp  MatrixTransformTester.cpp  TestUtility.cpp
